[package]
name = "client_rs"
version = "0.2.0"
authors = ["Raphael Matile <raphael.matile@gmail.com>"]

[dependencies]
log = "0.4"
env_logger = "0.5.13"
pretty_env_logger = "0.2"
num = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
node_rs = { git = "https://github.com/provotum/node-rs", branch = "master"}
crypto-rs = { git = "https://github.com/provotum/crypto-rs", branch = "master"}
clap = "2.26.0"